# openclaw-wakatime

./: .gitignore  AGENTS.md  CHANGELOG.md  COMMUNITY_SUBMISSION.md  README.md  RELEASE.md  index.ts  openclaw.plugin.json  package.json  pyproject.toml  setup_wakatime.mjs  setup_wakatime.py  wakatime_hooks.py  wakatime_openclaw.py  wakatime_wrapper.py  zsh-wakatime-hook.sh
hooks/wakatime-im/: HOOK.md  handler.js
src/: wakatime-command.ts  wakatime-tracker.ts
tests/: test_core.py  test_hooks.py  test_setup.py  wakatime-command.test.mjs
